# medical-checkup

./: .gitignore  pyproject.toml
medical_check/employee/: admin.py  types.py  urls.py
medical_check/employee/core/: exceptions.py
medical_check/employee/migrations/: 0001_initial.py  0002_auto_20190613_0644.py
medical_check/employee/models/: __init__.py  department.py  employee.py  position.py  work_location.py
medical_check/employee/views/: employee.py
medical_check/medical_checkup/: admin.py  apps.py  types.py  urls.py
medical_check/medical_checkup/core/: extract_examinee.py
medical_check/medical_checkup/migrations/: 0001_initial.py  0002_auto_20190610_1551.py  0003_auto_20190611_0626.py  0004_auto_20190613_0644.py
medical_check/medical_checkup/models/: __init__.py  checkup.py
medical_check/medical_checkup/views/: __init__.py  examinees.py
medical_check/root/: settings.py  urls.py
medical_check/tests/employee/: test_models.py  test_views.py
medical_check/tests/medical_checkup/: test_core.py  test_designate_course.py  test_models.py  test_reserve_checkup.py  test_views.py
