[tool.poetry]
name = "medical-check"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.9"
django-cors-headers = "^3.0"
django-extensions = "^2.1"

[tool.poetry.dev-dependencies]
bpython = "^0.18.0"
green = "^2.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
